--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^26.6.3",
-    "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.0.0",
@@ -55,6 +54,7 @@
     "react-router-dom": "^5.1.2",
     "react-tabs": "^3.1.2",
     "react-transition-group": "^4.4.1",
+    "sass": "^1.49.9",
     "strip-ansi": "^7.0.0",
     "use-state-with-callback": "^2.0.3",
     "webpack-merge": "^4.2.2"
