--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "sass": "^1.49.9",
     "strip-ansi": "^7.0.0",
     "use-state-with-callback": "^2.0.3",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^4.2.2",
+    "yarn": "^1.22.18"
   },
   "description": "My webpack project",
   "scripts": {
