--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "chart.js": "^2.8.0",
     "d3-ease": "^3.0.1",
     "deck.gl": "^8.0.16",
+    "gh-pages": "^4.0.0",
     "lodash": "^4.17.15",
     "mapbox-gl": "^1.8.1",
     "react": "^16.10.0",
@@ -57,8 +58,7 @@
     "sass": "^1.49.9",
     "strip-ansi": "^7.0.0",
     "use-state-with-callback": "^2.0.3",
-    "webpack-merge": "^4.2.2",
-    "yarn": "^1.22.18"
+    "webpack-merge": "^4.2.2"
   },
   "description": "My webpack project",
   "scripts": {
@@ -68,6 +68,7 @@
     "build:admin": "webpack --config webpack.prod.js --env.app=admin",
     "build:docs": "typedoc --options ./typedoc.json",
     "build:all": "yarn build:main && yarn build:admin && yarn build:docs",
-    "test": "jest"
+    "test": "jest",
+    "deploy": "aws s3 sync dist/ s3://traveler-website-1d"
   }
 }
