--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react": "^16.10.0",
     "react-countdown-circle-timer": "^2.5.4",
     "react-dom": "^16.10.0",
+    "react-html-parser": "^2.0.2",
     "react-map-gl": "^5.2.3",
     "react-router-dom": "^5.1.2",
     "react-tabs": "^3.1.2",
