--- a/package.json
+++ b/package.json
@@ -41,6 +41,11 @@
     "@types/graceful-fs": "^4.1.5",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.5",
+    "@visx/axis": "^3.8.0",
+    "@visx/group": "^3.3.0",
+    "@visx/scale": "^3.5.0",
+    "@visx/shape": "^3.5.0",
+    "@visx/text": "^3.3.0",
     "aws-sdk": "^2.610.0",
     "chart.js": "^2.8.0",
     "d3-ease": "^3.0.1",
