--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
         "allowJs": true,
         // "noImplicitAny": true,
         // "noImplicitThis": true,
-        "strictNullChecks": true
+        "strictNullChecks": true,
+        "downlevelIteration": true,
     },
     "include": [
       "./src"
