--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "evschen",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "7.1.0",
+    "@babel/cli": "^7.24.1",
     "@babel/core": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "7.0.0",
@@ -15,13 +15,16 @@
     "@types/react-dom": "^17.0.8",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
-    "@webpack-cli/init": "^0.2.2",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
+    "@webpack-cli/init": "^1.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.2.0",
+    "css-loader": "^6.10.0",
+    "eslint-plugin-react": "^7.34.1",
     "file-loader": "^4.2.0",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^5.6.0",
     "jest": "^26.6.3",
     "sass-loader": "^8.0.0",
     "source-map-loader": "^0.2.4",
@@ -29,9 +32,9 @@
     "ts-jest": "^26.5.5",
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.3",
-    "webpack": "^4.46.0",
+    "webpack": "^5.91.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.3"
+    "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.5.5",
@@ -50,6 +53,7 @@
     "chart.js": "^2.8.0",
     "d3-ease": "^3.0.1",
     "deck.gl": "^8.0.16",
+    "eslint": "^8.57.0",
     "lodash": "^4.17.15",
     "mapbox-gl": "^1.8.1",
     "react": "^16.10.0",
@@ -57,6 +61,7 @@
     "react-dom": "^16.10.0",
     "react-map-gl": "^5.2.3",
     "react-router-dom": "^5.1.2",
+    "react-scripts": "^5.0.1",
     "react-tabs": "^3.1.2",
     "react-transition-group": "^4.4.1",
     "sass": "^1.49.9",
@@ -66,12 +71,26 @@
   },
   "description": "My webpack project",
   "scripts": {
-    "start:main": "webpack-dev-server --env.app=main",
+    "lint": "eslint src --ext .jsx",
+    "lint-fix": "eslint --ext .jsx --fix",
+    "start:main": "react-scripts start",
     "start:admin": "webpack-dev-server --env.app=admin",
     "build:main": "webpack --config webpack.prod.js --env.app=main",
     "build:admin": "webpack --config webpack.prod.js --env.app=admin",
     "build:docs": "typedoc --options ./typedoc.json",
     "build:all": "yarn build:main && yarn build:admin && yarn build:docs",
     "test": "jest"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
