--- a/package.json
+++ b/package.json
@@ -6,68 +6,61 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.24.1",
-    "@babel/core": "^7.6.2",
-    "@babel/preset-env": "^7.6.2",
-    "@babel/preset-react": "7.0.0",
-    "@types/chart.js": "2.8.0",
-    "@types/lodash": "^4.14.149",
-    "@types/react": "^17.0.11",
-    "@types/react-dom": "^17.0.8",
-    "@types/react-router": "^5.1.4",
-    "@types/react-router-dom": "^5.1.3",
-    "@typescript-eslint/eslint-plugin": "^7.4.0",
-    "@typescript-eslint/parser": "^7.4.0",
-    "@webpack-cli/init": "^1.0.3",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.16.12",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@types/chart.js": "^2.8.0",
+    "@types/lodash": "^4.14.171",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-router": "^5.1.14",
+    "@types/react-router-dom": "^5.1.8",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
+    "babel-loader": "^8.2.3",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^6.10.0",
-    "eslint-plugin-react": "^7.34.1",
-    "file-loader": "^4.2.0",
-    "html-webpack-plugin": "^5.6.0",
-    "jest": "^26.6.3",
-    "sass-loader": "^8.0.0",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "^1.0.0",
-    "ts-jest": "^26.5.5",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.8.3",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^5.0.4"
+    "css-loader": "^6.5.0",
+    "eslint-plugin-react": "^7.28.0",
+    "file-loader": "^6.2.0",
+    "jest": "^27.4.7",
+    "sass-loader": "^12.3.0",
+    "source-map-loader": "^3.0.0",
+    "style-loader": "^3.0.0",
+    "ts-jest": "^27.1.3",
+    "ts-loader": "^9.2.5",
+    "typescript": "^4.6.4"
   },
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@material-ui/core": "^4.4.3",
-    "@material-ui/icons": "^4.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@material-ui/core": "^4.x.x",
+    "@material-ui/icons": "^4.x.x",
     "@material-ui/lab": "^4.0.0-alpha.57",
-    "@types/graceful-fs": "^4.1.5",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^15.12.5",
+    "@types/graceful-fs": "^4.1.6",
+    "@types/jest": "^27.0.4",
+    "@types/node": "^17.0.13",
     "@visx/axis": "^3.8.0",
     "@visx/group": "^3.3.0",
     "@visx/scale": "^3.5.0",
     "@visx/shape": "^3.5.0",
     "@visx/text": "^3.3.0",
-    "aws-sdk": "^2.610.0",
+    "aws-sdk": "^2.1048.0",
     "chart.js": "^2.8.0",
     "d3-ease": "^3.0.1",
-    "deck.gl": "^8.0.16",
-    "eslint": "^8.57.0",
-    "lodash": "^4.17.15",
-    "mapbox-gl": "^1.8.1",
-    "react": "^16.10.0",
-    "react-countdown-circle-timer": "^2.5.4",
-    "react-dom": "^16.10.0",
-    "react-map-gl": "^5.2.3",
-    "react-router-dom": "^5.1.2",
+    "deck.gl": "^8.3.0",
+    "eslint": "^8.7.0",
+    "lodash": "^4.17.21",
+    "mapbox-gl": "^2.6.1",
+    "react": "^16.x.x",
+    "react-countdown-circle-timer": "^3.1.0",
+    "react-dom": "^16.x.x",
+    "react-map-gl": "^6.1.17",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.1",
-    "react-tabs": "^3.1.2",
-    "react-transition-group": "^4.4.1",
+    "react-tabs": "^4.0.0",
+    "react-transition-group": "^4.4.2",
     "sass": "^1.49.9",
     "strip-ansi": "^7.0.0",
-    "use-state-with-callback": "^2.0.3",
-    "webpack-merge": "^4.2.2"
+    "use-state-with-callback": "^2.0.3"
   },
   "description": "My webpack project",
   "scripts": {
