--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "author": "evschen",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.24.1",
-    "@babel/core": "^7.16.12",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@types/chart.js": "^2.8.0",
     "@types/lodash": "^4.14.171",
     "@types/react": "^17.0.38",
@@ -17,8 +14,6 @@
     "@types/react-router-dom": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
-    "babel-loader": "^8.2.3",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "css-loader": "^6.5.0",
     "eslint-plugin-react": "^7.28.0",
     "file-loader": "^6.2.0",
@@ -31,7 +26,6 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@material-ui/core": "^4.x.x",
     "@material-ui/icons": "^4.x.x",
     "@material-ui/lab": "^4.0.0-alpha.57",
@@ -67,9 +61,9 @@
     "lint": "eslint src --ext .jsx",
     "lint-fix": "eslint --ext .jsx --fix",
     "start:main": "react-scripts start",
-    "start:admin": "webpack-dev-server --env.app=admin",
-    "build:main": "webpack --config webpack.prod.js --env.app=main",
-    "build:admin": "webpack --config webpack.prod.js --env.app=admin",
+    "start:admin": "react-scripts start --env-file .env.admin",
+    "build:main": "react-scripts build --env-file .env.main",
+    "build:admin": "react-scripts build --env-file .env.admin",
     "build:docs": "typedoc --options ./typedoc.json",
     "build:all": "yarn build:main && yarn build:admin && yarn build:docs",
     "test": "jest"
