--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,12 @@
 {
-  "semi": false,
-  "singleQuote": true,
+  "printWidth": 80,
   "tabWidth": 2,
-  "useTabs": false,
-  "jsxSingleQuote": true,
-  "trailingComma": "all",
-  "printWidth": 80
+  "useTabs": true,
+  "semi": true,
+  "singleQuote": true,
+  "trailingComma": "es5",
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "arrowParens": "always",
+  "endOfLine": "auto"
 }
