--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@material-ui/core": "^4.x.x",
     "@material-ui/icons": "^4.x.x",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@types/d3": "^7.4.3",
     "@types/graceful-fs": "^4.1.6",
     "@types/jest": "^27.0.4",
     "@types/node": "^17.0.13",
@@ -39,6 +40,7 @@
     "@visx/text": "^3.3.0",
     "aws-sdk": "^2.1048.0",
     "chart.js": "^2.8.0",
+    "d3": "^7.9.0",
     "d3-ease": "^3.0.1",
     "deck.gl": "^8.3.0",
     "eslint": "^8.7.0",
