--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "chart.js": "^2.8.0",
     "d3": "^7.9.0",
     "d3-ease": "^3.0.1",
+    "d3-regression": "^1.3.10",
     "deck.gl": "^8.3.0",
     "eslint": "^8.7.0",
     "lodash": "^4.17.21",
