--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-react": "^7.28.0",
     "file-loader": "^6.2.0",
     "jest": "^27.4.7",
+    "prettier": "^3.2.5",
     "sass-loader": "^12.3.0",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.0.0",
