--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -1,24 +1,23 @@
+blinker==1.8.2
 click==8.1.7
-cycler==0.11.0
-Flask==2.2.5
-Flask-Cors==4.0.0
-fonttools==4.38.0
-importlib-metadata==6.7.0
-itsdangerous==2.1.2
-Jinja2==3.1.3
-joblib==1.3.2
+contourpy==1.2.1
+cycler==0.12.1
+Flask==3.0.3
+Flask-Cors==4.0.1
+fonttools==4.53.1
+itsdangerous==2.2.0
+Jinja2==3.1.4
+joblib==1.4.2
 kiwisolver==1.4.5
 MarkupSafe==2.1.5
-matplotlib==3.5.3
-numpy==1.21.6
-packaging==24.0
-Pillow==9.5.0
+matplotlib==3.9.1
+numpy==2.0.0
+packaging==24.1
+pillow==10.4.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
-scikit-learn==1.0.2
-scipy==1.7.3
+scikit-learn==1.5.1
+scipy==1.14.0
 six==1.16.0
-threadpoolctl==3.1.0
-typing_extensions==4.7.1
-Werkzeug==2.2.3
-zipp==3.15.0
+threadpoolctl==3.5.0
+Werkzeug==3.0.3
